assets/css/main.scss
@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');

body {
    font-family: 'Space Grotesk';
}

.outline-effect-btn {
    opacity: 100% !important;
    position: absolute;
    background-color: #111111 !important;
    border-radius: 0 !important;
&::before,
&::after {
     content: "";
     position: absolute;
     top: 6px;
     left: 6px;
     width: 100%;
     height: 100%;
     border: 1.5px solid #111111;
 //background-color: #ffffff;
 }
}

.outline-effect-btn-accent {
  opacity: 100% !important;
  position: absolute;
  background-color: #A38D58 !important;
  border-radius: 0 !important;
  transform-style: preserve-3d;
  &::before,
  &::after {
    transform: translateZ(-1px);
    content: "";
    position: absolute;
    top: 6px;
    left: 6px;
    width: 100%;
    height: 100%;
    border: 1.5px solid #ffffff;
    //background-color: #ffffff;
  }
}

.outline-effect-btn-white {
  opacity: 100% !important;
  position: absolute !important;
  background-color: #ffffff !important;
  border-radius: 0 !important;
  transform-style: preserve-3d;
  &::before,
  &::after {
    transform: translateZ(-1px);
    overflow: auto;
    content: "" !important;
    position: absolute !important;
    top: 6px !important;
    left: 6px !important;
    width: 100% !important;
    height: 100% !important;
    border: 1.5px solid #ffffff !important;
  }
}

.outline-effect-transparent {
  opacity: 100% !important;
  position: relative;
  //background-color: #ffffff !important;
  border-radius: 0 !important;
  transform-style: preserve-3d;
  &::before,
  &::after {
    transform: translateZ(-1px);
    content: "";
    position: absolute;
    top: 9px;
    left: 9px;
    width: 100%;
    height: 100%;
    border: 1.5px solid #111111;
  }
}

.product-horizontal-list {
  display: flex;
  max-width: 74rem;
  gap: 1.5rem;
}

